--- a/svgdna.css
+++ b/svgdna.css
@@ -1,17 +1,34 @@
-div.box {
-  display:    inline-block;
-  font-size:  10px;
+body {
+  font-size:    0;
+}
+
+body > p {
+  font-size:    16px;
+}
+
+.box {
+  font-family:  monospace;
+  display:      inline-block;
+  font-size:    10px;
 }
 
 canvas {
-  width:      100px; 
-  height:     100px;
-  border:     4px inset #999;
-  margin:     4px;
+  width:        100px; 
+  height:       100px;
+  border:       4px inset #999;
+  margin:       4px;
+}
+
+#target {
+  border-color: green;
+}
+
+#best {
+  border-color: blue;
 }
 
 p {
-  margin:     0;
-  text-align: center;
+  margin:       0;
+  text-align:   center;
 }
 
