--- a/svgdna.css
+++ b/svgdna.css
@@ -1,34 +1,53 @@
 body {
-  font-size:    0;
+  text-align:       center;
+  font-family:      sans-serif;
 }
 
-body > p {
-  font-size:    16px;
+#boxes {
+  font-size:        0;
 }
 
 .box {
-  font-family:  monospace;
-  display:      inline-block;
-  font-size:    10px;
+  font-family:      monospace;
+  display:          inline-block;
+  font-size:        10px;
+  margin:           4px;
+  background-color: #999;
+  padding:          4px;
+  border:           2px outset #999;
+}
+
+.box p {
+  margin:           0;
+  color:            white;
+  text-shadow:      1px 1px 1px black;
 }
 
 canvas {
-  width:        100px; 
-  height:       100px;
-  border:       4px inset #999;
-  margin:       4px;
+  width:            100px; 
+  height:           100px;
+  border:           2px inset #999;
+  background-color: white;
 }
 
-#target {
-  border-color: green;
+#target-box, #weights-box {
+  background-color: #7fbf7f;
+  border-color:     #7fbf7f;
 }
 
-#best {
-  border-color: blue;
+#target, #weights {
+  border-color:     #7fbf7f;
 }
 
-p {
-  margin:       0;
-  text-align:   center;
+table {
+  margin:           1em auto;
 }
 
+th {
+  text-align:       left;
+}
+
+td {
+  text-align:       right;
+  min-width:        4em;
+}
