--- a/svgdna.css
+++ b/svgdna.css
@@ -31,12 +31,35 @@ canvas {
 }
 
 #target-box, #weights-box {
-  background-color: #7fbf7f;
-  border-color:     #7fbf7f;
+  background-color: #7f7f9f;
 }
 
-#target, #weights {
-  border-color:     #7fbf7f;
+#target-box, #weights-box, #target-box canvas, #weights-box canvas {
+  border-color:     #7f7f9f;
+}
+
+.survivor {
+  background-color: #9f9f7f;
+}
+
+.survivor, .survivor canvas {
+  border-color:     #9f9f7f;
+}
+
+.mutant {
+  background-color: #7f9f7f;
+}
+
+.mutant, .mutant canvas {
+  border-color:     #7f9f7f;
+}
+
+.crossbreed {
+  background-color: #9f7f7f;
+}
+
+.crossbreed, .crossbreed canvas {
+  border-color:     #9f7f7f;
 }
 
 table {
@@ -51,3 +74,4 @@ td {
   text-align:       right;
   min-width:        4em;
 }
+
