--- a/svgdna.css
+++ b/svgdna.css
@@ -26,9 +26,9 @@ body {
   display:          inline-block;
   font-size:        10px;
   margin:           4px;
-  background-color: #999;
+  background-color: #7f7f9f;
   padding:          4px;
-  border:           2px outset #999;
+  border:           2px outset #7f7f9f;
 }
 
 .box p {
@@ -38,16 +38,8 @@ body {
 }
 
 canvas {
-  border:           2px inset #999;
+  border:           2px inset #7f7f9f;
   background-color: white;
-}
-
-#target-box, #weights-box {
-  background-color: #7f7f9f;
-}
-
-#target-box, #weights-box, #target-box canvas, #weights-box canvas {
-  border-color:     #7f7f9f;
 }
 
 .survivor {
