--- a/svgdna.css
+++ b/svgdna.css
@@ -31,6 +31,7 @@ th.major {
   height:           300px;
   border:           8px ridge #666;
   margin:           8px;
+  background-image: url(textures/creampaper.png)
 }
 
 #boxes {
