--- a/svgdna.css
+++ b/svgdna.css
@@ -18,6 +18,10 @@ body {
   font-size:        90%;
 }
 
+input, select {
+  width:            12em;
+}
+
 th {
   font-weight:      normal;
 }
@@ -31,6 +35,7 @@ th.major {
   height:           300px;
   border:           8px ridge #666;
   margin:           8px;
+  background-image: url(textures/creampaper.png)
 }
 
 #boxes {
@@ -92,7 +97,6 @@ th {
 
 td {
   text-align:       right;
-  min-width:        4em;
 }
 
 #legend {
