fix background texture, add a sample

--- a/gallery.css
+++ b/gallery.css
@@ -34,6 +34,7 @@ body {
 
 #imgbox {
   position: absolute;
+  background-color: white;
   top: 60px;
   bottom: 60px;
   right: 20px;
@@ -50,7 +51,7 @@ body {
 }
 
 #painting {
-  background: url(textures/CreamPaper.png);
+  background: url(textures/creampaper.png);
   z-index: 1;
 }
 
